@@ -124,6 +124,15 @@ static int synthv1_jack_buffer_size ( jack_nframes_t nframes, void *arg )
 }
 
 
+//----------------------------------------------------------------------
+// JACK on-shutdown callback.
+
+static void synthv1_jack_on_shutdown ( void *arg )
+{
+	static_cast<synthv1_jack *> (arg)->shutdown();
+}
+
+
 #ifdef CONFIG_JACK_SESSION
 
 #include <jack/session.h>
@@ -351,6 +360,9 @@ void synthv1_jack::open ( const char *client_id )
 
 	jack_set_buffer_size_callback(m_client,
 		synthv1_jack_buffer_size, this);
+
+	jack_on_shutdown(m_client,
+		synthv1_jack_on_shutdown, this);
 
 	// set process callbacks...
 	::jack_set_process_callback(m_client,
@@ -600,6 +612,12 @@ void synthv1_jack::sessionEvent ( void *pvSessionArg )
 void synthv1_jack::updatePreset ( bool /*bDirty*/ )
 {
 	// nothing to do here...
+}
+
+
+void synthv1_jack::shutdown (void)
+{
+	QCoreApplication::quit();
 }
 
 
